# rust-translators

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
examples/google/: async.rs  sync.rs
src/: lib.rs
src/translators/: mod.rs
src/translators/google/: error.rs  mod.rs  requests.rs  test.rs  translator.rs
src/translators/translator/: mod.rs  translator.rs
tests/: google.rs  input.txt  mod.rs
