[package]
name = "translators"
version = "0.1.4"
edition = "2021"
authors = ["charl1e7"]
description = "Free Google Translator, Deepl without API key and limits."
license = "MIT"
repository = "https://github.com/charl1e7/rust-translators"
homepage = "https://github.com/charl1e7/rust-translators"
readme = "README.md"
keywords = ["translate", "google", "deepl", "language", "async"]
documentation = "https://docs.rs/translators/0.1.4/translators/"
exclude = ["tests/", "examples/", "Cargo.lock"]

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking", "socks"] }
tokio = { version = "1.41.0", features = ["macros", "sync"], optional = true }
futures = { version = "0.3.31", optional = true }
urlencoding = "2.1.3"
html-escape = "0.2.13"
regex = "1.11.1"
macon = "1.2.0"

[features]
all = ["tokio-async", "google"]
google = []
tokio-async = ["dep:tokio", "dep:futures"]
